fix the layout and shift the field to subnavbar

--- a/src/smallCompontes/uploadCard/uploadCard.css
+++ b/src/smallCompontes/uploadCard/uploadCard.css
@@ -1,5 +1,5 @@
 .uploadCard{
-    height: 40vh;
+    height: 20vh;
     width: 30%;
     /* border: 1px solid red; */
     
@@ -98,5 +98,5 @@
   
 
   .addMoreCards{
-    
+
   }
